# esp32-market-data-terminal

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  partitions.csv  sdkconfig.defaults
.claude/skills/dashboard-design/: SKILL.md
.claude/skills/dev-screenshot/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: build.yml
components/app_state/: CMakeLists.txt
components/app_state/host_test/: Makefile  test_app_state_kline_merge.c  test_app_state_retry_policy.c  test_common.h
components/app_state/include/: app_state.h  app_state_ota_task.h  app_state_sync_task.h  app_state_ws_task.h
components/app_state/src/: app_state.c  app_state_kline_merge.c  app_state_kline_merge.h  app_state_ota_task.c  app_state_retry_policy.c  app_state_retry_policy.h  app_state_sync_task.c  app_state_ws_task.c
components/board_jc4880p443c/: CMakeLists.txt  board_jc4880p443c.c  idf_component.yml
components/board_jc4880p443c/include/: board_jc4880p443c.h
components/display_format/include/: display_format.h
components/market_data_client/src/: market_data_http.c  (+11 more)
components/market_data_ws_client/: idf_component.yml
components/ota_client/: CMakeLists.txt
components/ota_client/host_test/: Makefile  test_common.h  test_ota_client_json.c
components/ota_client/include/: ota_client.h
components/ota_client/src/: ota_client.c  ota_client_json.c  ota_client_json.h
components/settings_store/: CMakeLists.txt
components/wifi_manager/: CMakeLists.txt  Kconfig  idf_component.yml
components/wifi_manager/host_test/: Makefile  test_wifi_policy_authblock.c  test_wifi_policy_boot.c  test_wifi_policy_cycle.c  test_wifi_policy_fallback.c  test_wifi_policy_pause_resume.c  test_wifi_policy_retry.c  test_wifi_policy_scan.c  test_wifi_policy_switch_network.c  test_wifi_profile_codec.c
components/wifi_manager/include/: wifi_manager.h
components/wifi_manager/src/: wifi_manager.c  wifi_manager_slave_ota.c  wifi_manager_slave_ota.h  wifi_policy.c  wifi_policy.h  wifi_profile_codec.c  wifi_profile_codec.h  wifi_profile_store.c  wifi_profile_store.h
docs/: architecture.md  roadmap.md  setup.md  testing.md
docs/debugging/: README.md  app-lifecycle-hardware-test.md  watchlist-add-freeze.md  wifi-nav-pool-exhaustion.md
docs/decisions/: 0001-wifi-connectivity.md  0003-runtime-state-error-handling.md  0005-esp-hosted-slave-ota.md  0006-ota-firmware-update.md  0007-watchlist-management.md  0008-watchlist-live-resubscribe.md  0009-regional-server-auto-selection.md  0010-licensing-and-disclaimer.md  0012-lazy-settings-screen-lifecycle.md
docs/development/: device-screenshot.md  ui-guidelines.md
docs/hardware/: jc4880p443c.md
docs/reviews/: pre-phase-17-code-audit.md
docs/validation/: README.md  app-state-runtime-hardware-test.md  boot-status-bar-flash-hardware-test.md  dashboard-ui-hardware-test.md  display-touch-bring-up.md  esp-hosted-2.12.9-slave-packet-mode-hardware-test.md  esp-hosted-2.12.9-upgrade-attempt.md  esp-hosted-slave-ota-hardware-test.md  esp32-p4-startup-diagnostics.md  first-flash-esptool-hardware-test.md  pre-phase-17-release-readiness.md  regional-server-auto-selection-hardware-test.md  websocket-streaming-hardware-test.md  wifi-autoconnect-hardware-test.md  wifi-hosted-link-bring-up.md
lvgl_ext/: lv_psram_pool.h
main/: CMakeLists.txt  Kconfig.projbuild  app_lifecycle.c  app_lifecycle.h  dev_console.c  dev_console.h  dev_screenshot_console.c  dev_screenshot_console.h  display_ui.c  display_ui.h  display_ui_logic.c  display_ui_logic.h  esp32-market-data-terminal.c  ota_console.c  ota_console.h  startup_diagnostics.c  startup_diagnostics.h
main/host_test/: Makefile  test_common.h  test_display_ui_logic.c
tools/: dev_screenshot.py  run_first_party_cppcheck.sh
tools/esp_hosted_slave/: build_slave_fw.sh  sdkconfig.packet_mode
(+35 files in other folders)
