idf_component_register(
    SRCS
        "esp32-market-data-terminal.c"
        "startup_diagnostics.c"
        "app_lifecycle.c"
        "display_ui.c"
        "display_ui_logic.c"
        "dev_console.c"
        "dev_screenshot_console.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        board_jc4880p443c
        wifi_manager
        settings_store
        time_sync
        app_state
        display_format
        ota_client
        nvs_flash
        console
        app_update
        esp_timer
        mbedtls
)
